Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96964

Changing the ShaderEffect shader crashes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.2.1
    • 6.1.3, 6.2.0 RC2
    • Quick: SceneGraph
    • None
    • 1
    • 664fcc6ecf7243366e70545ffa08453061be0907
    • Qt Quick 3D: Week 42

    Description

      Running the attached simple example app and clicking the text element few times leads to crash. Shaders are taken from qtdeclarative\examples\quick\shadereffects\content\shaders, unchanged. Seems like changing the ShaderEffect fragmentShader doesn't (re)initialize all things cleanly?

      Tested on Windows with Qt 6.2.0 RC2 and Qt 6.1.3 as well as Android with Qt 6.2.0 RC2.

      Attachments

        For Gerrit Dashboard: QTBUG-96964
        # Subject Branch Project Status CR V

        Activity

          People

            kagro Kaj Grönholm
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes