Recreate signal mappings when shader changes

Shaders may contain different variables & indexes, so it is safer to not
reuse signal mappings when the shader changes. Also change the m_mappers
to contain only actual mappers, insteaf of resizing it to theoretical
maximum varCount (which is never reached due to special variables).

Task-number: QTBUG-96964
Change-Id: Ia959647d72835fb08b9786b330161bf7277dfa45
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit 664fcc6ecf7243366e70545ffa08453061be0907)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>